tests/compile_fail/into/enum.stderr
error: `Into` cannot be derived for enums
 --> tests/compile_fail/into/enum.rs:2:1
  |
2 | enum Foo {
  | ^^^^
